# metadoc

./: .gitignore  .replit  README.md  package-lock.json  package.json  pyproject.toml
.cursor/rules/: tests.mdc
airic/: __init__.py  __main__.py
airic/cli/: __init__.py  app.py  main.py  repl.py  utils.py
airic/cli/commands/: __init__.py  ai.py  document.py  workspace.py
airic/core/: __init__.py  agent.py  ai_service.py  document.py  init.py  workspace.py
airic/utils/: __init__.py  markdown.py
docs/: prd.md  product_idea.md  structure.md
docs/task_master_prompt/: add_task.md  analyze_compexity.md  expand_task.md  parse_prd.md  update_plan.md  update_task.md
scripts/: PRD.txt  task-complexity-report.json
test_workspace/: README.md
test_workspace2/: README.md
test_workspace2/.airic/: config.yaml
tests/: __init__.py  test_init.py  test_markdown.py  test_workspace.py
tests/cli/: __init__.py  test_repl.py  test_repl_ai.py  test_repl_document_commands.py
tests/core/: test_ai_service.py  test_document.py
workspace/: README.md
workspace/.airic/: config.yaml
workspace/.airic/meta/agents/: assistant.md
workspace/.airic/meta/doctypes/: agent_def.md  doctype_def.md  workflow_def.md
